actualizo para subir

--- a/miapp/templates/miapp/lista_libros.html
+++ b/miapp/templates/miapp/lista_libros.html
@@ -22,14 +22,14 @@
         </tr>
         {% for libro in object_list  %}
             <tr>
-                <p>
-                    <td>{{ libro.nombre }}</td>
-                    <td>{{ libro.descripcion }}</td>
-                    <td>{{ libro.isbn }}</td>
-                    <td>{{ libro.copias }}</td>
-                    <td><a href="{% url 'editar_libro' libro.id %}">Editar</a></td>
-                    <td><a href="{% url 'borrar_libro' libro.id %}">Borrar</a></td>
-                </p>
+                
+                <td><a href="{% url 'detalle_libro' libro.pk %}">{{ libro.nombre }}</a></td>
+                <td>{{ libro.descripcion }}</td>
+                <td>{{ libro.isbn }}</td>
+                <td>{{ libro.copias }}</td>
+                <td><a href="{% url 'editar_libro' libro.id %}">Editar</a></td>
+                <td><a href="{% url 'borrar_libro' libro.id %}">Borrar</a></td>
+                
             </tr>
         {% endfor %}
 
