--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href= "{% url 'inicio' %}"> Inicio </a></li>
             <li><a href= "{% url 'listar_libros' %}"> Libros </a></li>
-            <li><a href= "#"> Ejemplares </a></li>
+            <li><a href= "{% url 'ejemplar_libro' %}"> Ejemplares </a></li>
             <li><a href= "#"> Prestamos </a></li>
             <li><a href= "#"> Iniciar sesión </a></li>
         </ul>
