--- a/miapp/templates/miapp/lista_libros.html
+++ b/miapp/templates/miapp/lista_libros.html
@@ -2,40 +2,46 @@
 
 {% block principal %}
     <h2>Listado de libros</h2>
-    <style>
-        table {
-            width: 100%;
-            border: 1px;
-        }
-        th, td {
-            height: 25%;
-        }
-    </style>
-    <table>
-        <tr>
-            <th>Nombre</th>
-            <th>Descripción</th>
-            <th>ISBN</th>
-            <th>Copias</th>
-            <th>Editar</th>
-            <th>Borrar</th>
-        </tr>
-        {% for libro in object_list  %}
-            <tr>
-                
-                <td><a href="{% url 'detalle_libro' libro.pk %}">{{ libro.nombre }}</a></td>
-                <td>{{ libro.descripcion }}</td>
-                <td>{{ libro.isbn }}</td>
-                <td>{{ libro.copias }}</td>
-                <td><a href="{% url 'editar_libro' libro.id %}">Editar</a></td>
-                <td><a href="{% url 'borrar_libro' libro.id %}">Borrar</a></td>
-                
-            </tr>
-        {% endfor %}
+    
+    <table class="table table-dark">
+            <thead>
+              <tr>
+                    <th>Nombre</th>
+                    <th>Descripción</th>
+                    <th>ISBN</th>
+                    <th>Copias</th>
+                    <th>Editar</th>
+                    <th>Borrar</th>
+              </tr>
+            </thead>
+            <tbody>
+                    {% for libro in object_list  %}
+                    <tr>
+                        
+                        <td><a href="{% url 'detalle_libro' libro.pk %}">{{ libro.nombre }}</a></td>
+                        <td>{{ libro.descripcion }}</td>
+                        <td>{{ libro.isbn }}</td>
+                        <td>{{ libro.copias }}</td>
+                        <td><a href="{% url 'editar_libro' libro.id %}">Editar</a></td>
+                        <td><a href="{% url 'borrar_libro' libro.id %}">Borrar</a></td>
+                        
+                    </tr>
+                    {% endfor %}
+             
+            </tbody>
+          </table>
 
-    </table>
-   
 
-    <a href="{% url 'nuevo_libro' %}">Nuevo Libro</a>
+
+
+
+
+
+
+
+
+
+
+    <button type="submit" id="butonagregarlibro" class="btn btn-light"><a href="{% url 'nuevo_libro' %}">Nuevo Libro</a></button>
 {% endblock %}
 
