--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,25 @@
 body{
     background-color: aqua;
 }
+/*
+#butonagregarlibro{
+    margin-left: auto;
+    margin-right: auto; 
+}
+h1{
+    margin-left: auto;
+    margin-right: auto; 
+}
+*/
+#barraNavegacion{
+    background-color: darkseagreen;
+}
+/*
+table {
+    width: 100%;
+    border: 1px;
+}
+th, td {
+    height: 25%;
+}
+*/
