--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="{% url 'lista_prestamo' %}">Prestamos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Iniciar Sesión</a>
+          <a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
         </li>        
     </ul>
 </nav>
