creo arreglos y condicionales para iniciar sesion

--- a/miapp/templates/miapp/ejemplar_libro.html
+++ b/miapp/templates/miapp/ejemplar_libro.html
@@ -23,8 +23,9 @@
                         <td>{{ ejemplar.numeroejemplar }}</td>
                         <td>{{ ejemplar.fechadecompra }}</td>
                         <td>{{ ejemplar.libro }}</td>
+                        {% if user.is_authenticated %}
                         <td><button type="submit" class="btn btn-light"><a href="{% url 'editar_ejemplar' ejemplar.id %}">Editar</a></button></td>
-                        
+                        {% endif %}
                     </tr>
                 {% endfor %}
 
