--- a/miapp/templates/miapp/index.html
+++ b/miapp/templates/miapp/index.html
@@ -2,7 +2,12 @@
 
 {% block principal %}
     <p>
-        Esta es mi pagina de inicio
+        Esta es mi pagina de inicio.
     </p>
 
+    <p>
+        sea bienvenido
+        a esta excelente pagina en la cual encontraras informacion super importante acerca de nuestros listados de libros
+        
+    </p>
 {% endblock %}
