--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <h2>Biblioteca</h2>
+    <h1 class="text-center">BIBLIOTECA</h1>
 
     
 <nav id="barraNavegacion">
@@ -25,26 +25,35 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'ejemplar_libro' %}">Ejemplares</a>
         </li>
+        {% if user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'lista_prestamo' %}">Prestamos</a>
-        </li>
+        </li>  
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
-        </li>        
+          <a class="nav-link" href="{% url 'logout' %}">Salir {{ user.username }}</a>
+        </li>     
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login' %}">Iniciar sesion</a>
+        </li>
+        {% endif %}
     </ul>
 </nav>
-
-
-
-
-
-
-
 
   
     {%  block principal %}
         <p>Bloque principal para las paginas</p>
     {%  endblock %}
+
+
+    <!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
+   
+  <div class="footer-copyright text-center py-3">© 2019 Copyright:
+    <a href=""> Daniel Steban Ortiz Arenas</a>
+  </div>
+</footer>
+     
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
